# credential-provider

./: .gitignore  .typos.toml  Cargo.toml  README.md  deny.toml  renovate.json
.github/workflows/: ci.yml  cliff.toml  docs.yml  fuzz.yml  lint.yml  mutation.yml  release-plz-pr.yml  release-plz.yml  vault-integration.yml
credential-provider/: CHANGELOG.md  Cargo.toml
credential-provider-core/: CHANGELOG.md  Cargo.toml
credential-provider-core/src/: caching.rs  caching_tests.rs  credentials.rs  credentials_tests.rs  error.rs  lib.rs  mock.rs  mock_tests.rs  provider.rs
credential-provider/src/: aws.rs  azure.rs  env.rs  env_tests.rs  lib.rs  test_support.rs  vault.rs  vault_tests.rs
docs/: catalog.md
docs/adr/: ADR-001-hexagonal-architecture.md  ADR-002-single-generic-provider-trait.md  ADR-003-stale-fallback-on-refresh-failure.md  ADR-004-external-vault-authentication.md  ADR-005-observability-facades-in-core.md
docs/security-review/: 2026-05-27-task-4.0-dynamic-credentials.md
docs/spec/: README.md  architecture.md  assertions.md  constraints.md  credential-provider-core.md  credential-provider.md  edge-cases.md  mutation-report-task4.0-vault.json  operations.md  overview.md  responsibilities.md  security.md  shared-registry.md  test-coverage.md  testing.md  tradeoffs.md  vocabulary.md
docs/spec/interfaces/: README.md  aws-adapter.md  azure-adapter.md  caching.md  credential-types.md  env-adapters.md  shared-types.md  test-support.md  vault-adapter.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_caching/: ecache2_refresh_boundary  rule1_empty_cache_error  rule2_valid_outside_window  rule34_stale_fallback  rule5_expired_propagate_error  rule6_no_expiry_cached_forever
fuzz/fuzz_targets/: fuzz_caching.rs
