[workspace]
members = [
    "credential-provider-core",
    "credential-provider",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pvandervelde/credential-provider"

[workspace.dependencies]
# Core dependencies (always present)
secrecy   = { version = "0.8", features = ["serde"] }
thiserror = "1"
tokio     = { version = "1", features = ["sync", "time"] }

# Encoding — used by env feature for HMAC key decoding
hex    = "0.4"
base64 = "0.22"

# Test utilities — async_closure feature enables async_with_vars
temp-env = { version = "0.3", features = ["async_closure"] }

# Vault backend — mark optional = true in member Cargo.toml
vaultrs = { version = "0.8", default-features = false, features = ["rustls"] }

# Azure backend — mark optional = true in member Cargo.toml
azure_identity = { version = "0.19" }
azure_core     = { version = "0.19" }

# AWS backend — mark optional = true in member Cargo.toml
aws-config           = { version = "1" }
aws-credential-types = { version = "1" }

# JSON parsing — used by vault feature; mark optional = true in member Cargo.toml
serde_json = { version = "1" }

# Test helpers for vault error construction — rustify is a transitive dep of vaultrs 0.8;
# pin to the same minor to ensure test error variants match production types exactly.
rustify = { version = "0.7", default-features = false }
anyhow  = { version = "1" }
# reqwest is vaultrs 0.8's HTTP backend; exposed for constructing ParseCertificateError
# in unit tests (path-leakage assertion). No network access is exercised in tests.
reqwest = { version = "0.13", default-features = false }

# Structured logging
tracing = "0.1"

# Metrics facade
metrics = "0.24"
