[package]
name        = "credential-provider-core"
version     = "0.1.0"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
description = "Provider-agnostic credential management traits and types for Rust services"

[dependencies]
secrecy   = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
# Exposes MockCredentialProvider for use in downstream test code.
# Must never be enabled in production builds.
test-support = []
